--- a/dokumentaatio/checkstyle/xref/allclasses-frame.html
+++ b/dokumentaatio/checkstyle/xref/allclasses-frame.html
@@ -12,10 +12,34 @@
 
 		<ul>
 						<li>
+				<a href="cs/helsinki/sudoku/ui/kasittelija/AloitusKasittelija.html" target="classFrame">AloitusKasittelija</a>
+			</li>
+						<li>
+				<a href="cs/helsinki/sudoku/ui/nakyma/Aloitusnakyma.html" target="classFrame">Aloitusnakyma</a>
+			</li>
+						<li>
 				<a href="cs/helsinki/sudoku/util/GeneraattoriUtil.html" target="classFrame">GeneraattoriUtil</a>
 			</li>
 						<li>
+				<a href="cs/helsinki/sudoku/ui/Kayttoliittyma.html" target="classFrame">Kayttoliittyma</a>
+			</li>
+						<li>
+				<a href="cs/helsinki/sudoku/ui/kasittelija/LisaaPoistaSuodatin.html" target="classFrame">LisaaPoistaSuodatin</a>
+			</li>
+						<li>
+				<a href="cs/helsinki/sudoku/ui/nakyma/Nakyma.html" target="classFrame">Nakyma</a>
+			</li>
+						<li>
+				<a href="cs/helsinki/sudoku/ui/nakyma/Nakymanhallinta.html" target="classFrame">Nakymanhallinta</a>
+			</li>
+						<li>
 				<a href="cs/helsinki/sudoku/app/Pelimoottori.html" target="classFrame">Pelimoottori</a>
+			</li>
+						<li>
+				<a href="cs/helsinki/sudoku/ui/nakyma/Pelinakyma.html" target="classFrame">Pelinakyma</a>
+			</li>
+						<li>
+				<a href="cs/helsinki/sudoku/app/RuudunStatus.html" target="classFrame">RuudunStatus</a>
 			</li>
 						<li>
 				<a href="cs/helsinki/sudoku/util/SopivatLuvut.html" target="classFrame">SopivatLuvut</a>
@@ -33,7 +57,13 @@
 				<a href="cs/helsinki/sudoku/util/Util.html" target="classFrame">Util</a>
 			</li>
 						<li>
+				<a href="cs/helsinki/sudoku/ui/kasittelija/UusiPeliKasittelija.html" target="classFrame">UusiPeliKasittelija</a>
+			</li>
+						<li>
 				<a href="cs/helsinki/sudoku/app/Vaikeusaste.html" target="classFrame">Vaikeusaste</a>
+			</li>
+						<li>
+				<a href="cs/helsinki/sudoku/ui/kasittelija/VaikeusasteKasittelija.html" target="classFrame">VaikeusasteKasittelija</a>
 			</li>
 			      </ul>
 
