--- a/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/app/package-frame.html
+++ b/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/app/package-frame.html
@@ -19,6 +19,9 @@
             	<a href="Pelimoottori.html" target="classFrame">Pelimoottori</a>
           	</li>
           	          	<li>
+            	<a href="RuudunStatus.html" target="classFrame">RuudunStatus</a>
+          	</li>
+          	          	<li>
             	<a href="Sudokugeneraattori.html" target="classFrame">Sudokugeneraattori</a>
           	</li>
           	          	<li>
