--- a/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/ui/package-summary.html
+++ b/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/ui/package-summary.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>sudoku 1.0-SNAPSHOT Reference Package cs.helsinki.sudoku.app</title>
+		<title>sudoku 1.0-SNAPSHOT Reference Package cs.helsinki.sudoku.ui</title>
 		<link rel="stylesheet" type="text/css" href="../../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -26,7 +26,7 @@
         	</ul>
       	</div>
 		
-		      	<h2>Package cs.helsinki.sudoku.app</h2>
+		      	<h2>Package cs.helsinki.sudoku.ui</h2>
 
 		<table class="summary">
         	<thead>
@@ -37,27 +37,7 @@
         	<tbody>
         		            	<tr>
               		<td>
-                		<a href="Pelimoottori.html" target="classFrame">Pelimoottori</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="RuudunStatus.html" target="classFrame">RuudunStatus</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="Sudokugeneraattori.html" target="classFrame">Sudokugeneraattori</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="Sudokupeli.html" target="classFrame">Sudokupeli</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="Vaikeusaste.html" target="classFrame">Vaikeusaste</a>
+                		<a href="Kayttoliittyma.html" target="classFrame">Kayttoliittyma</a>
               		</td>
             	</tr>
 				        	</tbody>
