--- a/dokumentaatio/checkstyle/xref/overview-frame.html
+++ b/dokumentaatio/checkstyle/xref/overview-frame.html
@@ -22,6 +22,15 @@
 				<a href="cs/helsinki/sudoku/app/package-frame.html" target="packageFrame">cs.helsinki.sudoku.app</a>
 			</li>
 						<li>
+				<a href="cs/helsinki/sudoku/ui/package-frame.html" target="packageFrame">cs.helsinki.sudoku.ui</a>
+			</li>
+						<li>
+				<a href="cs/helsinki/sudoku/ui/kasittelija/package-frame.html" target="packageFrame">cs.helsinki.sudoku.ui.kasittelija</a>
+			</li>
+						<li>
+				<a href="cs/helsinki/sudoku/ui/nakyma/package-frame.html" target="packageFrame">cs.helsinki.sudoku.ui.nakyma</a>
+			</li>
+						<li>
 				<a href="cs/helsinki/sudoku/util/package-frame.html" target="packageFrame">cs.helsinki.sudoku.util</a>
 			</li>
 					</ul>
