--- a/dokumentaatio/checkstyle/xref/overview-summary.html
+++ b/dokumentaatio/checkstyle/xref/overview-summary.html
@@ -45,6 +45,21 @@
             	</tr>
 	          	            	<tr>
               		<td>
+                		<a href="cs/helsinki/sudoku/ui/package-summary.html">cs.helsinki.sudoku.ui</a>
+              		</td>
+            	</tr>
+	          	            	<tr>
+              		<td>
+                		<a href="cs/helsinki/sudoku/ui/kasittelija/package-summary.html">cs.helsinki.sudoku.ui.kasittelija</a>
+              		</td>
+            	</tr>
+	          	            	<tr>
+              		<td>
+                		<a href="cs/helsinki/sudoku/ui/nakyma/package-summary.html">cs.helsinki.sudoku.ui.nakyma</a>
+              		</td>
+            	</tr>
+	          	            	<tr>
+              		<td>
                 		<a href="cs/helsinki/sudoku/util/package-summary.html">cs.helsinki.sudoku.util</a>
               		</td>
             	</tr>
