--- a/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/app/Pelimoottori.html
+++ b/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/app/Pelimoottori.html
@@ -29,14 +29,22 @@
 <a class="jxr_linenumber" name="L21" href="#L21">21</a>          <strong class="jxr_keyword">return</strong> peli;
 <a class="jxr_linenumber" name="L22" href="#L22">22</a>      }
 <a class="jxr_linenumber" name="L23" href="#L23">23</a>      
-<a class="jxr_linenumber" name="L24" href="#L24">24</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">int</strong>[][] annaPelilauta() {
-<a class="jxr_linenumber" name="L25" href="#L25">25</a>          <strong class="jxr_keyword">return</strong> peli.annaPelilauta();
+<a class="jxr_linenumber" name="L24" href="#L24">24</a>      <strong class="jxr_keyword">public</strong> <a href="../../../../cs/helsinki/sudoku/app/RuudunStatus.html">RuudunStatus</a>[][] paivitaArvoPelilaudalla(<strong class="jxr_keyword">int</strong> luku, <strong class="jxr_keyword">int</strong> rivi, <strong class="jxr_keyword">int</strong> sarake) {
+<a class="jxr_linenumber" name="L25" href="#L25">25</a>          <strong class="jxr_keyword">return</strong> peli.paivitaArvo(luku, rivi, sarake);
 <a class="jxr_linenumber" name="L26" href="#L26">26</a>      }
 <a class="jxr_linenumber" name="L27" href="#L27">27</a>      
-<a class="jxr_linenumber" name="L28" href="#L28">28</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> tulostaRatkaisu() {
-<a class="jxr_linenumber" name="L29" href="#L29">29</a>          peli.tulostaRatkaisu();
+<a class="jxr_linenumber" name="L28" href="#L28">28</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">boolean</strong> peliValmis() {
+<a class="jxr_linenumber" name="L29" href="#L29">29</a>          <strong class="jxr_keyword">return</strong> peli.valmis();
 <a class="jxr_linenumber" name="L30" href="#L30">30</a>      }
-<a class="jxr_linenumber" name="L31" href="#L31">31</a>  }
+<a class="jxr_linenumber" name="L31" href="#L31">31</a>      
+<a class="jxr_linenumber" name="L32" href="#L32">32</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">int</strong>[][] annaPelilauta() {
+<a class="jxr_linenumber" name="L33" href="#L33">33</a>          <strong class="jxr_keyword">return</strong> peli.annaPelilauta();
+<a class="jxr_linenumber" name="L34" href="#L34">34</a>      }
+<a class="jxr_linenumber" name="L35" href="#L35">35</a>      
+<a class="jxr_linenumber" name="L36" href="#L36">36</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> tulostaRatkaisu() {
+<a class="jxr_linenumber" name="L37" href="#L37">37</a>          peli.tulostaRatkaisu();
+<a class="jxr_linenumber" name="L38" href="#L38">38</a>      }
+<a class="jxr_linenumber" name="L39" href="#L39">39</a>  }
 </pre>
 <hr/>
 <div id="footer">Copyright &#169; 2017. All rights reserved.</div>
