--- a/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/ui/nakyma/package-summary.html
+++ b/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/ui/nakyma/package-summary.html
@@ -3,14 +3,14 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>sudoku 1.0-SNAPSHOT Reference Package cs.helsinki.sudoku.app</title>
-		<link rel="stylesheet" type="text/css" href="../../../../stylesheet.css" title="style" />
+		<title>sudoku 1.0-SNAPSHOT Reference Package cs.helsinki.sudoku.ui.nakyma</title>
+		<link rel="stylesheet" type="text/css" href="../../../../../stylesheet.css" title="style" />
 	</head>
 	<body>
 		      	<div class="overview">
         	<ul>
           		<li>
-            		<a href="../../../../overview-summary.html">Overview</a>
+            		<a href="../../../../../overview-summary.html">Overview</a>
           		</li>
           		<li class="selected">Package</li>
         	</ul>
@@ -18,7 +18,7 @@
       	<div class="framenoframe">
         	<ul>
           		<li>
-            		<a href="../../../../index.html" target="_top">FRAMES</a>
+            		<a href="../../../../../index.html" target="_top">FRAMES</a>
           		</li>
           		<li>
             		<a href="package-summary.html" target="_top">NO FRAMES</a>
@@ -26,7 +26,7 @@
         	</ul>
       	</div>
 		
-		      	<h2>Package cs.helsinki.sudoku.app</h2>
+		      	<h2>Package cs.helsinki.sudoku.ui.nakyma</h2>
 
 		<table class="summary">
         	<thead>
@@ -37,27 +37,22 @@
         	<tbody>
         		            	<tr>
               		<td>
-                		<a href="Pelimoottori.html" target="classFrame">Pelimoottori</a>
+                		<a href="Aloitusnakyma.html" target="classFrame">Aloitusnakyma</a>
               		</td>
             	</tr>
 				            	<tr>
               		<td>
-                		<a href="RuudunStatus.html" target="classFrame">RuudunStatus</a>
+                		<a href="Nakyma.html" target="classFrame">Nakyma</a>
               		</td>
             	</tr>
 				            	<tr>
               		<td>
-                		<a href="Sudokugeneraattori.html" target="classFrame">Sudokugeneraattori</a>
+                		<a href="Nakymanhallinta.html" target="classFrame">Nakymanhallinta</a>
               		</td>
             	</tr>
 				            	<tr>
               		<td>
-                		<a href="Sudokupeli.html" target="classFrame">Sudokupeli</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="Vaikeusaste.html" target="classFrame">Vaikeusaste</a>
+                		<a href="Pelinakyma.html" target="classFrame">Pelinakyma</a>
               		</td>
             	</tr>
 				        	</tbody>
@@ -66,7 +61,7 @@
 		      	<div class="overview">
         	<ul>
           		<li>
-            		<a href="../../../../overview-summary.html">Overview</a>
+            		<a href="../../../../../overview-summary.html">Overview</a>
           		</li>
           		<li class="selected">Package</li>
         	</ul>
@@ -74,7 +69,7 @@
       	<div class="framenoframe">
         	<ul>
           		<li>
-            		<a href="../../../../index.html" target="_top">FRAMES</a>
+            		<a href="../../../../../index.html" target="_top">FRAMES</a>
           		</li>
           		<li>
             		<a href="package-summary.html" target="_top">NO FRAMES</a>
