--- a/dokumentaatio/pit/cs.helsinki.sudoku.app/Vaikeusaste.java.html
+++ b/dokumentaatio/pit/cs.helsinki.sudoku.app/Vaikeusaste.java.html
@@ -64,12 +64,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12d5c30e_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_1'/>
 1
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12d5c30e_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_1'></a>
 <span>
 </span>
 </td>
@@ -78,12 +78,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12d5c30e_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_2'/>
 2
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12d5c30e_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_2'></a>
 <span>
 </span>
 </td>
@@ -92,12 +92,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12d5c30e_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_3'/>
 3
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12d5c30e_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_3'></a>
 <span>
 </span>
 </td>
@@ -106,12 +106,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12d5c30e_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_4'/>
 4
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12d5c30e_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_4'></a>
 <span>
 </span>
 </td>
@@ -120,12 +120,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12d5c30e_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_5'/>
 5
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12d5c30e_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_5'></a>
 <span>
 </span>
 </td>
@@ -134,12 +134,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12d5c30e_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_6'/>
 6
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12d5c30e_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_6'></a>
 <span>
 </span>
 </td>
@@ -148,12 +148,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12d5c30e_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_7'/>
 7
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12d5c30e_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_7'></a>
 <span>
 </span>
 </td>
@@ -162,12 +162,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12d5c30e_8'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_8'/>
 8
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12d5c30e_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_8'></a>
 <span>
 </span>
 </td>
@@ -176,12 +176,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12d5c30e_9'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_9'/>
 9
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12d5c30e_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_9'></a>
 <span>
 </span>
 </td>
@@ -190,12 +190,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12d5c30e_10'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_10'/>
 10
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12d5c30e_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_10'></a>
 <span>
 </span>
 </td>
@@ -204,12 +204,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12d5c30e_11'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_11'/>
 11
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12d5c30e_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_11'></a>
 <span>
 </span>
 </td>
@@ -218,12 +218,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12d5c30e_12'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_12'/>
 12
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12d5c30e_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_12'></a>
 <span>
 </span>
 </td>
@@ -232,12 +232,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12d5c30e_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_13'/>
 13
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12d5c30e_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_13'></a>
 <span>
 </span>
 </td>
@@ -246,12 +246,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12d5c30e_14'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_14'/>
 14
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12d5c30e_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_14'></a>
 <span>
 </span>
 </td>
@@ -260,12 +260,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12d5c30e_15'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_15'/>
 15
 </td>
 <td class='killed'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12d5c30e_15'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_15'>1</a>
 <span>
 1. annaTyhjennettavienLkm : replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED<br/>
 
@@ -276,12 +276,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12d5c30e_16'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_16'/>
 16
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12d5c30e_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_16'></a>
 <span>
 </span>
 </td>
@@ -290,12 +290,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@12d5c30e_17'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_17'/>
 17
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12d5c30e_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_17'></a>
 <span>
 </span>
 </td>
@@ -306,11 +306,11 @@ body{
 <tr><td></td><td></td><td><h2>Mutations</h2></td></tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@12d5c30e_15'>15</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6c6017b9_15'>15</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@12d5c30e_15'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_15'/> 
 
 <p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>annaTyhjennettavienLkm<br/><b>Killed by : </b>cs.helsinki.sudoku.app.PelimoottoriTest.luoPelinJossaOikeaMaaraTyhjia(cs.helsinki.sudoku.app.PelimoottoriTest)</span></span> replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED</p> 
 </td>
@@ -333,7 +333,7 @@ body{
 
 <h2>Tests examined</h2>
 <ul>
-<li>cs.helsinki.sudoku.app.PelimoottoriTest.asettaaRatkaisunPeliaLuotaessa(cs.helsinki.sudoku.app.PelimoottoriTest) (72 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.tyhjentaaRuudutJaRuutulistanJosAloitetaanUusiPeli(cs.helsinki.sudoku.app.PelimoottoriTest) (50 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.taytettyPohjaSailyySamanaTyhjennyksenJalkeen(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (22 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.luoPelinJossaOikeaMaaraTyhjia(cs.helsinki.sudoku.app.PelimoottoriTest) (56 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.antaaLaudanJossaOikeaRiviJaSarakemaara(cs.helsinki.sudoku.app.PelimoottoriTest) (203 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.eiTeeVirheitaIsommallaMassallaPelinLuonnissa(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (855 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.antaaPelin(cs.helsinki.sudoku.app.PelimoottoriTest) (98 ms)</li>
+<li>cs.helsinki.sudoku.app.PelimoottoriTest.asettaaRatkaisunPeliaLuotaessa(cs.helsinki.sudoku.app.PelimoottoriTest) (62 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.peliKesken(cs.helsinki.sudoku.app.PelimoottoriTest) (74 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.tyhjentaaRuudutJaRuutulistanJosAloitetaanUusiPeli(cs.helsinki.sudoku.app.PelimoottoriTest) (82 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.paivittaaArvonLaudalla(cs.helsinki.sudoku.app.PelimoottoriTest) (56 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.taytettyPohjaSailyySamanaTyhjennyksenJalkeen(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (22 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.luoPelinJossaOikeaMaaraTyhjia(cs.helsinki.sudoku.app.PelimoottoriTest) (47 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.antaaLaudanJossaOikeaRiviJaSarakemaara(cs.helsinki.sudoku.app.PelimoottoriTest) (826 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.eiTeeVirheitaIsommallaMassallaPelinLuonnissa(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (1069 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.antaaPelin(cs.helsinki.sudoku.app.PelimoottoriTest) (55 ms)</li>
 </ul>
 
 <br/>
