--- a/dokumentaatio/pit/cs.helsinki.sudoku.app/index.html
+++ b/dokumentaatio/pit/cs.helsinki.sudoku.app/index.html
@@ -72,9 +72,9 @@
     </thead>
     <tbody>
         <tr>
-            <td>4</td>
-            <td>95% <div class="coverage_bar"><div class="coverage_complete" style="width:95%"></div><div class="coverage_ledgend">123/130</div></div></td>
-            <td>92% <div class="coverage_bar"><div class="coverage_complete" style="width:92%"></div><div class="coverage_ledgend">54/59</div></div></td>
+            <td>5</td>
+            <td>96% <div class="coverage_bar"><div class="coverage_complete" style="width:96%"></div><div class="coverage_ledgend">155/162</div></div></td>
+            <td>90% <div class="coverage_bar"><div class="coverage_complete" style="width:90%"></div><div class="coverage_ledgend">76/84</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -93,8 +93,14 @@
 
         <tr>
             <td><a href="./Pelimoottori.java.html">Pelimoottori.java</a></td>
-            <td><div class="coveragePercentage">80% </div><div class="coverage_bar"><div class="coverage_complete" style="width:80%"></div><div class="coverage_ledgend">12/15</div></div></td>
-            <td><div class="coveragePercentage">75% </div><div class="coverage_bar"><div class="coverage_complete" style="width:75%"></div><div class="coverage_ledgend">6/8</div></div></td>
+            <td><div class="coveragePercentage">88% </div><div class="coverage_bar"><div class="coverage_complete" style="width:88%"></div><div class="coverage_ledgend">14/16</div></div></td>
+            <td><div class="coveragePercentage">89% </div><div class="coverage_bar"><div class="coverage_complete" style="width:89%"></div><div class="coverage_ledgend">8/9</div></div></td>
+        </tr>
+
+        <tr>
+            <td><a href="./RuudunStatus.java.html">RuudunStatus.java</a></td>
+            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">9/9</div></div></td>
+            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">1/1</div></div></td>
         </tr>
 
         <tr>
@@ -105,8 +111,8 @@
 
         <tr>
             <td><a href="./Sudokupeli.java.html">Sudokupeli.java</a></td>
-            <td><div class="coveragePercentage">75% </div><div class="coverage_bar"><div class="coverage_complete" style="width:75%"></div><div class="coverage_ledgend">12/16</div></div></td>
-            <td><div class="coveragePercentage">67% </div><div class="coverage_bar"><div class="coverage_complete" style="width:67%"></div><div class="coverage_ledgend">4/6</div></div></td>
+            <td><div class="coveragePercentage">87% </div><div class="coverage_bar"><div class="coverage_complete" style="width:87%"></div><div class="coverage_ledgend">33/38</div></div></td>
+            <td><div class="coveragePercentage">79% </div><div class="coverage_bar"><div class="coverage_complete" style="width:79%"></div><div class="coverage_ledgend">23/29</div></div></td>
         </tr>
 
         <tr>
