--- a/dokumentaatio/checkstyle/xref/allclasses-frame.html
+++ b/dokumentaatio/checkstyle/xref/allclasses-frame.html
@@ -12,6 +12,12 @@
 
 		<ul>
 						<li>
+				<a href="cs/helsinki/sudoku/ui/kasittelija/Aikarajakasittelija.html" target="classFrame">Aikarajakasittelija</a>
+			</li>
+						<li>
+				<a href="cs/helsinki/sudoku/ui/Ajastin.html" target="classFrame">Ajastin</a>
+			</li>
+						<li>
 				<a href="cs/helsinki/sudoku/ui/kasittelija/AloitusKasittelija.html" target="classFrame">AloitusKasittelija</a>
 			</li>
 						<li>
@@ -22,6 +28,9 @@
 			</li>
 						<li>
 				<a href="cs/helsinki/sudoku/ui/Kayttoliittyma.html" target="classFrame">Kayttoliittyma</a>
+			</li>
+						<li>
+				<a href="cs/helsinki/sudoku/ui/Kellonaytto.html" target="classFrame">Kellonaytto</a>
 			</li>
 						<li>
 				<a href="cs/helsinki/sudoku/ui/kasittelija/LisaaPoistaSuodatin.html" target="classFrame">LisaaPoistaSuodatin</a>
