--- a/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/ui/kasittelija/package-frame.html
+++ b/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/ui/kasittelija/package-frame.html
@@ -16,6 +16,9 @@
 
       	<ul>
       		          	<li>
+            	<a href="Aikarajakasittelija.html" target="classFrame">Aikarajakasittelija</a>
+          	</li>
+          	          	<li>
             	<a href="AloitusKasittelija.html" target="classFrame">AloitusKasittelija</a>
           	</li>
           	          	<li>
