--- a/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/ui/kasittelija/package-summary.html
+++ b/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/ui/kasittelija/package-summary.html
@@ -37,6 +37,11 @@
         	<tbody>
         		            	<tr>
               		<td>
+                		<a href="Aikarajakasittelija.html" target="classFrame">Aikarajakasittelija</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="AloitusKasittelija.html" target="classFrame">AloitusKasittelija</a>
               		</td>
             	</tr>
