--- a/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/ui/package-frame.html
+++ b/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/ui/package-frame.html
@@ -16,7 +16,13 @@
 
       	<ul>
       		          	<li>
+            	<a href="Ajastin.html" target="classFrame">Ajastin</a>
+          	</li>
+          	          	<li>
             	<a href="Kayttoliittyma.html" target="classFrame">Kayttoliittyma</a>
+          	</li>
+          	          	<li>
+            	<a href="Kellonaytto.html" target="classFrame">Kellonaytto</a>
           	</li>
           	      	</ul>
 
