--- a/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/ui/package-summary.html
+++ b/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/ui/package-summary.html
@@ -37,7 +37,17 @@
         	<tbody>
         		            	<tr>
               		<td>
+                		<a href="Ajastin.html" target="classFrame">Ajastin</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="Kayttoliittyma.html" target="classFrame">Kayttoliittyma</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="Kellonaytto.html" target="classFrame">Kellonaytto</a>
               		</td>
             	</tr>
 				        	</tbody>
