--- a/dokumentaatio/pit/cs.helsinki.sudoku.app/Vaikeusaste.java.html
+++ b/dokumentaatio/pit/cs.helsinki.sudoku.app/Vaikeusaste.java.html
@@ -64,12 +64,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_1'/>
 1
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_1'></a>
 <span>
 </span>
 </td>
@@ -78,12 +78,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_2'/>
 2
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_2'></a>
 <span>
 </span>
 </td>
@@ -92,12 +92,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_3'/>
 3
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_3'></a>
 <span>
 </span>
 </td>
@@ -106,54 +106,54 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_4'/>
 4
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_4'></a>
 <span>
 </span>
 </td>
-<td class='covered'><pre><span  class=''>    HELPPO(25),</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>    HELPPO(25, 3, 0),</span></pre></td></tr>
 
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_5'/>
 5
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_5'></a>
 <span>
 </span>
 </td>
-<td class='covered'><pre><span  class=''>    KESKITASO(35),</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>    KESKITASO(40, 10, 0),</span></pre></td></tr>
 
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_6'/>
 6
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_6'></a>
 <span>
 </span>
 </td>
-<td class='covered'><pre><span  class=''>    VAIKEA(50);</span></pre></td></tr>
+<td class='covered'><pre><span  class=''>    VAIKEA(55, 25, 0);</span></pre></td></tr>
 
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_7'/>
 7
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_7'></a>
 <span>
 </span>
 </td>
@@ -162,12 +162,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_8'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_8'/>
 8
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_8'></a>
 <span>
 </span>
 </td>
@@ -176,40 +176,68 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_9'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_9'/>
 9
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_9'></a>
 <span>
 </span>
 </td>
-<td class=''><pre><span  class=''></span></pre></td></tr>
+<td class=''><pre><span  class=''>    private final int minuutit;</span></pre></td></tr>
 
 
 <tr>
-<td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_10'/>
+<td class='na'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_10'/>
 10
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_10'></a>
 <span>
 </span>
 </td>
-<td class='covered'><pre><span  class=''>    Vaikeusaste(int tyhjennettavienLkm) {</span></pre></td></tr>
+<td class=''><pre><span  class=''>    private final int sekunnit;</span></pre></td></tr>
 
 
 <tr>
-<td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_11'/>
+<td class='na'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_11'/>
 11
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_11'></a>
+<span>
+</span>
+</td>
+<td class=''><pre><span  class=''>    </span></pre></td></tr>
+
+
+<tr>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_12'/>
+12
+</td>
+<td class=''>
+<span class='pop'>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_12'></a>
+<span>
+</span>
+</td>
+<td class='covered'><pre><span  class=''>    Vaikeusaste(int tyhjennettavienLkm, int minuutit, int sekunnit) {</span></pre></td></tr>
+
+
+<tr>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_13'/>
+13
+</td>
+<td class=''>
+<span class='pop'>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_13'></a>
 <span>
 </span>
 </td>
@@ -218,12 +246,40 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_12'/>
-12
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_14'/>
+14
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_14'></a>
+<span>
+</span>
+</td>
+<td class='covered'><pre><span  class=''>        this.minuutit = minuutit;</span></pre></td></tr>
+
+
+<tr>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_15'/>
+15
+</td>
+<td class=''>
+<span class='pop'>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_15'></a>
+<span>
+</span>
+</td>
+<td class='covered'><pre><span  class=''>        this.sekunnit = sekunnit;</span></pre></td></tr>
+
+
+<tr>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_16'/>
+16
+</td>
+<td class=''>
+<span class='pop'>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_16'></a>
 <span>
 </span>
 </td>
@@ -232,12 +288,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_13'/>
-13
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_17'/>
+17
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_17'></a>
 <span>
 </span>
 </td>
@@ -246,12 +302,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_14'/>
-14
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_18'/>
+18
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_18'></a>
 <span>
 </span>
 </td>
@@ -260,12 +316,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_15'/>
-15
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_19'/>
+19
 </td>
 <td class='killed'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_15'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_19'>1</a>
 <span>
 1. annaTyhjennettavienLkm : replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED<br/>
 
@@ -276,12 +332,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_16'/>
-16
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_20'/>
+20
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_20'></a>
 <span>
 </span>
 </td>
@@ -290,12 +346,128 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6c6017b9_17'/>
-17
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_21'/>
+21
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_21'></a>
+<span>
+</span>
+</td>
+<td class=''><pre><span  class=''>    </span></pre></td></tr>
+
+
+<tr>
+<td class='na'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_22'/>
+22
+</td>
+<td class=''>
+<span class='pop'>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_22'></a>
+<span>
+</span>
+</td>
+<td class=''><pre><span  class=''>    public int annaMinuutit() {</span></pre></td></tr>
+
+
+<tr>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_23'/>
+23
+</td>
+<td class='killed'>
+<span class='pop'>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_23'>1</a>
+<span>
+1. annaMinuutit : replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED<br/>
+
+</span>
+</td>
+<td class='covered'><pre><span  class='killed'>        return minuutit;</span></pre></td></tr>
+
+
+<tr>
+<td class='na'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_24'/>
+24
+</td>
+<td class=''>
+<span class='pop'>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_24'></a>
+<span>
+</span>
+</td>
+<td class=''><pre><span  class=''>    }</span></pre></td></tr>
+
+
+<tr>
+<td class='na'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_25'/>
+25
+</td>
+<td class=''>
+<span class='pop'>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_25'></a>
+<span>
+</span>
+</td>
+<td class=''><pre><span  class=''>    </span></pre></td></tr>
+
+
+<tr>
+<td class='na'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_26'/>
+26
+</td>
+<td class=''>
+<span class='pop'>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_26'></a>
+<span>
+</span>
+</td>
+<td class=''><pre><span  class=''>    public int annaSekunnit() {</span></pre></td></tr>
+
+
+<tr>
+<td class='covered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_27'/>
+27
+</td>
+<td class='killed'>
+<span class='pop'>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_27'>1</a>
+<span>
+1. annaSekunnit : replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED<br/>
+
+</span>
+</td>
+<td class='covered'><pre><span  class='killed'>        return sekunnit;</span></pre></td></tr>
+
+
+<tr>
+<td class='na'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_28'/>
+28
+</td>
+<td class=''>
+<span class='pop'>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_28'></a>
+<span>
+</span>
+</td>
+<td class=''><pre><span  class=''>    }</span></pre></td></tr>
+
+
+<tr>
+<td class='na'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@61bcbcce_29'/>
+29
+</td>
+<td class=''>
+<span class='pop'>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_29'></a>
 <span>
 </span>
 </td>
@@ -306,13 +478,33 @@ body{
 <tr><td></td><td></td><td><h2>Mutations</h2></td></tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6c6017b9_15'>15</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@61bcbcce_19'>19</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6c6017b9_15'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_19'/> 
 
 <p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>annaTyhjennettavienLkm<br/><b>Killed by : </b>cs.helsinki.sudoku.app.PelimoottoriTest.luoPelinJossaOikeaMaaraTyhjia(cs.helsinki.sudoku.app.PelimoottoriTest)</span></span> replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED</p> 
+</td>
+</tr>
+<tr>
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@61bcbcce_23'>23</a></td> 
+<td></td>
+<td>
+
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_23'/> 
+
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>annaMinuutit<br/><b>Killed by : </b>cs.helsinki.sudoku.app.VaikeusasteTest.antaaMinuutitJaSekunnit(cs.helsinki.sudoku.app.VaikeusasteTest)</span></span> replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED</p> 
+</td>
+</tr>
+<tr>
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@61bcbcce_27'>27</a></td> 
+<td></td>
+<td>
+
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@61bcbcce_27'/> 
+
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>annaSekunnit<br/><b>Killed by : </b>cs.helsinki.sudoku.app.VaikeusasteTest.antaaMinuutitJaSekunnit(cs.helsinki.sudoku.app.VaikeusasteTest)</span></span> replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED</p> 
 </td>
 </tr>
 
@@ -333,7 +525,7 @@ body{
 
 <h2>Tests examined</h2>
 <ul>
-<li>cs.helsinki.sudoku.app.PelimoottoriTest.asettaaRatkaisunPeliaLuotaessa(cs.helsinki.sudoku.app.PelimoottoriTest) (62 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.peliKesken(cs.helsinki.sudoku.app.PelimoottoriTest) (74 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.tyhjentaaRuudutJaRuutulistanJosAloitetaanUusiPeli(cs.helsinki.sudoku.app.PelimoottoriTest) (82 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.paivittaaArvonLaudalla(cs.helsinki.sudoku.app.PelimoottoriTest) (56 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.taytettyPohjaSailyySamanaTyhjennyksenJalkeen(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (22 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.luoPelinJossaOikeaMaaraTyhjia(cs.helsinki.sudoku.app.PelimoottoriTest) (47 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.antaaLaudanJossaOikeaRiviJaSarakemaara(cs.helsinki.sudoku.app.PelimoottoriTest) (826 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.eiTeeVirheitaIsommallaMassallaPelinLuonnissa(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (1069 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.antaaPelin(cs.helsinki.sudoku.app.PelimoottoriTest) (55 ms)</li>
+<li>cs.helsinki.sudoku.app.PelimoottoriTest.asettaaRatkaisunPeliaLuotaessa(cs.helsinki.sudoku.app.PelimoottoriTest) (63 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.peliKesken(cs.helsinki.sudoku.app.PelimoottoriTest) (106 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.tyhjentaaRuudutJaRuutulistanJosAloitetaanUusiPeli(cs.helsinki.sudoku.app.PelimoottoriTest) (65 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.paivittaaArvonLaudalla(cs.helsinki.sudoku.app.PelimoottoriTest) (65 ms)</li><li>cs.helsinki.sudoku.app.VaikeusasteTest.antaaMinuutitJaSekunnit(cs.helsinki.sudoku.app.VaikeusasteTest) (1 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.taytettyPohjaSailyySamanaTyhjennyksenJalkeen(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (32 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.luoPelinJossaOikeaMaaraTyhjia(cs.helsinki.sudoku.app.PelimoottoriTest) (75 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.antaaLaudanJossaOikeaRiviJaSarakemaara(cs.helsinki.sudoku.app.PelimoottoriTest) (652 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.eiTeeVirheitaIsommallaMassallaPelinLuonnissa(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (1059 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.antaaPelin(cs.helsinki.sudoku.app.PelimoottoriTest) (103 ms)</li>
 </ul>
 
 <br/>
