--- a/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/app/Vaikeusaste.html
+++ b/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/app/Vaikeusaste.html
@@ -9,20 +9,32 @@
 <a class="jxr_linenumber" name="L1" href="#L1">1</a>   <strong class="jxr_keyword">package</strong> cs.helsinki.sudoku.app;
 <a class="jxr_linenumber" name="L2" href="#L2">2</a>   
 <a class="jxr_linenumber" name="L3" href="#L3">3</a>   <strong class="jxr_keyword">public</strong> enum <a href="../../../../cs/helsinki/sudoku/app/Vaikeusaste.html">Vaikeusaste</a> {
-<a class="jxr_linenumber" name="L4" href="#L4">4</a>       HELPPO(25),
-<a class="jxr_linenumber" name="L5" href="#L5">5</a>       KESKITASO(35),
-<a class="jxr_linenumber" name="L6" href="#L6">6</a>       VAIKEA(50);
+<a class="jxr_linenumber" name="L4" href="#L4">4</a>       HELPPO(25, 3, 0),
+<a class="jxr_linenumber" name="L5" href="#L5">5</a>       KESKITASO(40, 10, 0),
+<a class="jxr_linenumber" name="L6" href="#L6">6</a>       VAIKEA(55, 25, 0);
 <a class="jxr_linenumber" name="L7" href="#L7">7</a>   
 <a class="jxr_linenumber" name="L8" href="#L8">8</a>       <strong class="jxr_keyword">private</strong> <strong class="jxr_keyword">final</strong> <strong class="jxr_keyword">int</strong> tyhjennettavienLkm;
-<a class="jxr_linenumber" name="L9" href="#L9">9</a>   
-<a class="jxr_linenumber" name="L10" href="#L10">10</a>      <a href="../../../../cs/helsinki/sudoku/app/Vaikeusaste.html">Vaikeusaste</a>(<strong class="jxr_keyword">int</strong> tyhjennettavienLkm) {
-<a class="jxr_linenumber" name="L11" href="#L11">11</a>          <strong class="jxr_keyword">this</strong>.tyhjennettavienLkm = tyhjennettavienLkm;
-<a class="jxr_linenumber" name="L12" href="#L12">12</a>      }
-<a class="jxr_linenumber" name="L13" href="#L13">13</a>      
-<a class="jxr_linenumber" name="L14" href="#L14">14</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">int</strong> annaTyhjennettavienLkm() {
-<a class="jxr_linenumber" name="L15" href="#L15">15</a>          <strong class="jxr_keyword">return</strong> tyhjennettavienLkm;
+<a class="jxr_linenumber" name="L9" href="#L9">9</a>       <strong class="jxr_keyword">private</strong> <strong class="jxr_keyword">final</strong> <strong class="jxr_keyword">int</strong> minuutit;
+<a class="jxr_linenumber" name="L10" href="#L10">10</a>      <strong class="jxr_keyword">private</strong> <strong class="jxr_keyword">final</strong> <strong class="jxr_keyword">int</strong> sekunnit;
+<a class="jxr_linenumber" name="L11" href="#L11">11</a>      
+<a class="jxr_linenumber" name="L12" href="#L12">12</a>      <a href="../../../../cs/helsinki/sudoku/app/Vaikeusaste.html">Vaikeusaste</a>(<strong class="jxr_keyword">int</strong> tyhjennettavienLkm, <strong class="jxr_keyword">int</strong> minuutit, <strong class="jxr_keyword">int</strong> sekunnit) {
+<a class="jxr_linenumber" name="L13" href="#L13">13</a>          <strong class="jxr_keyword">this</strong>.tyhjennettavienLkm = tyhjennettavienLkm;
+<a class="jxr_linenumber" name="L14" href="#L14">14</a>          <strong class="jxr_keyword">this</strong>.minuutit = minuutit;
+<a class="jxr_linenumber" name="L15" href="#L15">15</a>          <strong class="jxr_keyword">this</strong>.sekunnit = sekunnit;
 <a class="jxr_linenumber" name="L16" href="#L16">16</a>      }
-<a class="jxr_linenumber" name="L17" href="#L17">17</a>  }
+<a class="jxr_linenumber" name="L17" href="#L17">17</a>      
+<a class="jxr_linenumber" name="L18" href="#L18">18</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">int</strong> annaTyhjennettavienLkm() {
+<a class="jxr_linenumber" name="L19" href="#L19">19</a>          <strong class="jxr_keyword">return</strong> tyhjennettavienLkm;
+<a class="jxr_linenumber" name="L20" href="#L20">20</a>      }
+<a class="jxr_linenumber" name="L21" href="#L21">21</a>      
+<a class="jxr_linenumber" name="L22" href="#L22">22</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">int</strong> annaMinuutit() {
+<a class="jxr_linenumber" name="L23" href="#L23">23</a>          <strong class="jxr_keyword">return</strong> minuutit;
+<a class="jxr_linenumber" name="L24" href="#L24">24</a>      }
+<a class="jxr_linenumber" name="L25" href="#L25">25</a>      
+<a class="jxr_linenumber" name="L26" href="#L26">26</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">int</strong> annaSekunnit() {
+<a class="jxr_linenumber" name="L27" href="#L27">27</a>          <strong class="jxr_keyword">return</strong> sekunnit;
+<a class="jxr_linenumber" name="L28" href="#L28">28</a>      }
+<a class="jxr_linenumber" name="L29" href="#L29">29</a>  }
 </pre>
 <hr/>
 <div id="footer">Copyright &#169; 2017. All rights reserved.</div>
