--- a/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/ui/Kayttoliittyma.html
+++ b/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/ui/Kayttoliittyma.html
@@ -16,41 +16,64 @@
 <a class="jxr_linenumber" name="L8" href="#L8">8</a>   <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">class</strong> <a href="../../../../cs/helsinki/sudoku/ui/Kayttoliittyma.html">Kayttoliittyma</a> <strong class="jxr_keyword">implements</strong> Runnable {
 <a class="jxr_linenumber" name="L9" href="#L9">9</a>   
 <a class="jxr_linenumber" name="L10" href="#L10">10</a>      <strong class="jxr_keyword">private</strong> <a href="../../../../cs/helsinki/sudoku/app/Pelimoottori.html">Pelimoottori</a> moottori;
-<a class="jxr_linenumber" name="L11" href="#L11">11</a>      <strong class="jxr_keyword">private</strong> <a href="../../../../cs/helsinki/sudoku/ui/nakyma/Nakymanhallinta.html">Nakymanhallinta</a> nakyma;
+<a class="jxr_linenumber" name="L11" href="#L11">11</a>      <strong class="jxr_keyword">private</strong> <a href="../../../../cs/helsinki/sudoku/ui/nakyma/Nakymanhallinta.html">Nakymanhallinta</a> hallinta;
 <a class="jxr_linenumber" name="L12" href="#L12">12</a>      <strong class="jxr_keyword">private</strong> <a href="../../../../cs/helsinki/sudoku/app/Vaikeusaste.html">Vaikeusaste</a> aste;
-<a class="jxr_linenumber" name="L13" href="#L13">13</a>  
-<a class="jxr_linenumber" name="L14" href="#L14">14</a>      <strong class="jxr_keyword">public</strong> <a href="../../../../cs/helsinki/sudoku/ui/Kayttoliittyma.html">Kayttoliittyma</a>(<a href="../../../../cs/helsinki/sudoku/app/Pelimoottori.html">Pelimoottori</a> moottori) {
-<a class="jxr_linenumber" name="L15" href="#L15">15</a>          <strong class="jxr_keyword">this</strong>.moottori = moottori;
-<a class="jxr_linenumber" name="L16" href="#L16">16</a>          <strong class="jxr_keyword">this</strong>.nakyma = <strong class="jxr_keyword">new</strong> <a href="../../../../cs/helsinki/sudoku/ui/nakyma/Nakymanhallinta.html">Nakymanhallinta</a>(<strong class="jxr_keyword">this</strong>);
-<a class="jxr_linenumber" name="L17" href="#L17">17</a>      }
-<a class="jxr_linenumber" name="L18" href="#L18">18</a>  
-<a class="jxr_linenumber" name="L19" href="#L19">19</a>      @Override
-<a class="jxr_linenumber" name="L20" href="#L20">20</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> run() {
-<a class="jxr_linenumber" name="L21" href="#L21">21</a>          nakyma.init();
-<a class="jxr_linenumber" name="L22" href="#L22">22</a>      }
-<a class="jxr_linenumber" name="L23" href="#L23">23</a>      
-<a class="jxr_linenumber" name="L24" href="#L24">24</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> asetaVaikeusaste(<a href="../../../../cs/helsinki/sudoku/app/Vaikeusaste.html">Vaikeusaste</a> aste) {
-<a class="jxr_linenumber" name="L25" href="#L25">25</a>          <strong class="jxr_keyword">this</strong>.aste = aste;
-<a class="jxr_linenumber" name="L26" href="#L26">26</a>      }
-<a class="jxr_linenumber" name="L27" href="#L27">27</a>  
-<a class="jxr_linenumber" name="L28" href="#L28">28</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> pyydaUusiPeli() {
-<a class="jxr_linenumber" name="L29" href="#L29">29</a>          moottori.uusiPeli(aste);
-<a class="jxr_linenumber" name="L30" href="#L30">30</a>      }
-<a class="jxr_linenumber" name="L31" href="#L31">31</a>  
-<a class="jxr_linenumber" name="L32" href="#L32">32</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">int</strong>[][] pyydaPelilauta() {
-<a class="jxr_linenumber" name="L33" href="#L33">33</a>          <strong class="jxr_keyword">return</strong> moottori.annaPelilauta();
-<a class="jxr_linenumber" name="L34" href="#L34">34</a>      }
-<a class="jxr_linenumber" name="L35" href="#L35">35</a>      
-<a class="jxr_linenumber" name="L36" href="#L36">36</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> paivitaArvo(<strong class="jxr_keyword">int</strong> luku, <strong class="jxr_keyword">int</strong> rivi, <strong class="jxr_keyword">int</strong> sarake) {
-<a class="jxr_linenumber" name="L37" href="#L37">37</a>          
-<a class="jxr_linenumber" name="L38" href="#L38">38</a>          <a href="../../../../cs/helsinki/sudoku/app/RuudunStatus.html">RuudunStatus</a>[][] uudetStatukset = moottori.paivitaArvoPelilaudalla(luku, rivi, sarake);
-<a class="jxr_linenumber" name="L39" href="#L39">39</a>          nakyma.paivitaPelinaytonVarit(uudetStatukset);
-<a class="jxr_linenumber" name="L40" href="#L40">40</a>          <strong class="jxr_keyword">boolean</strong> peliValmis = moottori.peliValmis();
-<a class="jxr_linenumber" name="L41" href="#L41">41</a>          <strong class="jxr_keyword">if</strong> (peliValmis) {
-<a class="jxr_linenumber" name="L42" href="#L42">42</a>              nakyma.naytaValmisIlmoitus();
-<a class="jxr_linenumber" name="L43" href="#L43">43</a>          }
-<a class="jxr_linenumber" name="L44" href="#L44">44</a>      }
-<a class="jxr_linenumber" name="L45" href="#L45">45</a>  }
+<a class="jxr_linenumber" name="L13" href="#L13">13</a>      <strong class="jxr_keyword">private</strong> <strong class="jxr_keyword">boolean</strong> kaytaAikarajaa;
+<a class="jxr_linenumber" name="L14" href="#L14">14</a>  
+<a class="jxr_linenumber" name="L15" href="#L15">15</a>      <strong class="jxr_keyword">public</strong> <a href="../../../../cs/helsinki/sudoku/ui/Kayttoliittyma.html">Kayttoliittyma</a>(<a href="../../../../cs/helsinki/sudoku/app/Pelimoottori.html">Pelimoottori</a> moottori) {
+<a class="jxr_linenumber" name="L16" href="#L16">16</a>          <strong class="jxr_keyword">this</strong>.moottori = moottori;
+<a class="jxr_linenumber" name="L17" href="#L17">17</a>          <strong class="jxr_keyword">this</strong>.hallinta = <strong class="jxr_keyword">new</strong> <a href="../../../../cs/helsinki/sudoku/ui/nakyma/Nakymanhallinta.html">Nakymanhallinta</a>(<strong class="jxr_keyword">this</strong>);
+<a class="jxr_linenumber" name="L18" href="#L18">18</a>      }
+<a class="jxr_linenumber" name="L19" href="#L19">19</a>  
+<a class="jxr_linenumber" name="L20" href="#L20">20</a>      @Override
+<a class="jxr_linenumber" name="L21" href="#L21">21</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> run() {
+<a class="jxr_linenumber" name="L22" href="#L22">22</a>          hallinta.init();
+<a class="jxr_linenumber" name="L23" href="#L23">23</a>      }
+<a class="jxr_linenumber" name="L24" href="#L24">24</a>      
+<a class="jxr_linenumber" name="L25" href="#L25">25</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> asetaVaikeusaste(<a href="../../../../cs/helsinki/sudoku/app/Vaikeusaste.html">Vaikeusaste</a> aste) {
+<a class="jxr_linenumber" name="L26" href="#L26">26</a>          <strong class="jxr_keyword">this</strong>.aste = aste;
+<a class="jxr_linenumber" name="L27" href="#L27">27</a>      }
+<a class="jxr_linenumber" name="L28" href="#L28">28</a>      
+<a class="jxr_linenumber" name="L29" href="#L29">29</a>      <strong class="jxr_keyword">public</strong> <a href="../../../../cs/helsinki/sudoku/app/Vaikeusaste.html">Vaikeusaste</a> annaVaikeusaste() {
+<a class="jxr_linenumber" name="L30" href="#L30">30</a>          <strong class="jxr_keyword">return</strong> aste;
+<a class="jxr_linenumber" name="L31" href="#L31">31</a>      }
+<a class="jxr_linenumber" name="L32" href="#L32">32</a>      
+<a class="jxr_linenumber" name="L33" href="#L33">33</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">boolean</strong> kaytaAikarajaa() {
+<a class="jxr_linenumber" name="L34" href="#L34">34</a>          <strong class="jxr_keyword">return</strong> kaytaAikarajaa;
+<a class="jxr_linenumber" name="L35" href="#L35">35</a>      }
+<a class="jxr_linenumber" name="L36" href="#L36">36</a>  
+<a class="jxr_linenumber" name="L37" href="#L37">37</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> pyydaUusiPeli() {
+<a class="jxr_linenumber" name="L38" href="#L38">38</a>          <strong class="jxr_keyword">if</strong> (aste == <strong class="jxr_keyword">null</strong>) {
+<a class="jxr_linenumber" name="L39" href="#L39">39</a>              aste = Vaikeusaste.HELPPO;
+<a class="jxr_linenumber" name="L40" href="#L40">40</a>          }
+<a class="jxr_linenumber" name="L41" href="#L41">41</a>          moottori.uusiPeli(aste);
+<a class="jxr_linenumber" name="L42" href="#L42">42</a>      }
+<a class="jxr_linenumber" name="L43" href="#L43">43</a>  
+<a class="jxr_linenumber" name="L44" href="#L44">44</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">int</strong>[][] pyydaPelilauta() {
+<a class="jxr_linenumber" name="L45" href="#L45">45</a>          <strong class="jxr_keyword">return</strong> moottori.annaPelilauta();
+<a class="jxr_linenumber" name="L46" href="#L46">46</a>      }
+<a class="jxr_linenumber" name="L47" href="#L47">47</a>      
+<a class="jxr_linenumber" name="L48" href="#L48">48</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> paivitaArvo(<strong class="jxr_keyword">int</strong> luku, <strong class="jxr_keyword">int</strong> rivi, <strong class="jxr_keyword">int</strong> sarake) {
+<a class="jxr_linenumber" name="L49" href="#L49">49</a>          
+<a class="jxr_linenumber" name="L50" href="#L50">50</a>          <a href="../../../../cs/helsinki/sudoku/app/RuudunStatus.html">RuudunStatus</a>[][] uudetStatukset = moottori.paivitaArvoPelilaudalla(luku, rivi, sarake);
+<a class="jxr_linenumber" name="L51" href="#L51">51</a>          hallinta.paivitaPelinaytonVarit(uudetStatukset);
+<a class="jxr_linenumber" name="L52" href="#L52">52</a>          <strong class="jxr_keyword">boolean</strong> peliValmis = moottori.peliValmis();
+<a class="jxr_linenumber" name="L53" href="#L53">53</a>          <strong class="jxr_keyword">if</strong> (peliValmis) {
+<a class="jxr_linenumber" name="L54" href="#L54">54</a>              hallinta.naytaValmisIlmoitus();
+<a class="jxr_linenumber" name="L55" href="#L55">55</a>          }
+<a class="jxr_linenumber" name="L56" href="#L56">56</a>      }
+<a class="jxr_linenumber" name="L57" href="#L57">57</a>  
+<a class="jxr_linenumber" name="L58" href="#L58">58</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> tarkistaPelitilanneAjanLoppuessa() {
+<a class="jxr_linenumber" name="L59" href="#L59">59</a>          <strong class="jxr_keyword">boolean</strong> peliValmis = moottori.peliValmis();
+<a class="jxr_linenumber" name="L60" href="#L60">60</a>          <strong class="jxr_keyword">if</strong> (!peliValmis) {
+<a class="jxr_linenumber" name="L61" href="#L61">61</a>              hallinta.naytaAikaLoppuiIlmoitus();
+<a class="jxr_linenumber" name="L62" href="#L62">62</a>          }
+<a class="jxr_linenumber" name="L63" href="#L63">63</a>      }
+<a class="jxr_linenumber" name="L64" href="#L64">64</a>  
+<a class="jxr_linenumber" name="L65" href="#L65">65</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> asetaKaytaAikarajaa(<strong class="jxr_keyword">boolean</strong> uusiArvo) {
+<a class="jxr_linenumber" name="L66" href="#L66">66</a>          <strong class="jxr_keyword">this</strong>.kaytaAikarajaa = uusiArvo;
+<a class="jxr_linenumber" name="L67" href="#L67">67</a>      }
+<a class="jxr_linenumber" name="L68" href="#L68">68</a>  }
 </pre>
 <hr/>
 <div id="footer">Copyright &#169; 2017. All rights reserved.</div>
