pit ja checkstyle

--- a/dokumentaatio/checkstyle/xref/allclasses-frame.html
+++ b/dokumentaatio/checkstyle/xref/allclasses-frame.html
@@ -27,6 +27,9 @@
 				<a href="cs/helsinki/sudoku/util/GeneraattoriUtil.html" target="classFrame">GeneraattoriUtil</a>
 			</li>
 						<li>
+				<a href="cs/helsinki/sudoku/ui/nakyma/Ilmoitus.html" target="classFrame">Ilmoitus</a>
+			</li>
+						<li>
 				<a href="cs/helsinki/sudoku/ui/Kayttoliittyma.html" target="classFrame">Kayttoliittyma</a>
 			</li>
 						<li>
