--- a/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/ui/nakyma/package-frame.html
+++ b/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/ui/nakyma/package-frame.html
@@ -19,6 +19,9 @@
             	<a href="Aloitusnakyma.html" target="classFrame">Aloitusnakyma</a>
           	</li>
           	          	<li>
+            	<a href="Ilmoitus.html" target="classFrame">Ilmoitus</a>
+          	</li>
+          	          	<li>
             	<a href="Nakyma.html" target="classFrame">Nakyma</a>
           	</li>
           	          	<li>
