--- a/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/ui/nakyma/package-summary.html
+++ b/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/ui/nakyma/package-summary.html
@@ -42,6 +42,11 @@
             	</tr>
 				            	<tr>
               		<td>
+                		<a href="Ilmoitus.html" target="classFrame">Ilmoitus</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="Nakyma.html" target="classFrame">Nakyma</a>
               		</td>
             	</tr>
