--- a/dokumentaatio/pit/cs.helsinki.sudoku.app/Vaikeusaste.java.html
+++ b/dokumentaatio/pit/cs.helsinki.sudoku.app/Vaikeusaste.java.html
@@ -64,12 +64,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_1'/>
 1
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_1'></a>
 <span>
 </span>
 </td>
@@ -78,12 +78,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_2'/>
 2
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_2'></a>
 <span>
 </span>
 </td>
@@ -92,12 +92,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_3'/>
 3
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_3'></a>
 <span>
 </span>
 </td>
@@ -106,12 +106,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_4'/>
 4
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_4'></a>
 <span>
 </span>
 </td>
@@ -120,12 +120,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_5'/>
 5
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_5'></a>
 <span>
 </span>
 </td>
@@ -134,12 +134,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_6'/>
 6
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_6'></a>
 <span>
 </span>
 </td>
@@ -148,12 +148,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_7'/>
 7
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_7'></a>
 <span>
 </span>
 </td>
@@ -162,12 +162,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_8'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_8'/>
 8
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_8'></a>
 <span>
 </span>
 </td>
@@ -176,12 +176,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_9'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_9'/>
 9
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_9'></a>
 <span>
 </span>
 </td>
@@ -190,12 +190,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_10'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_10'/>
 10
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_10'></a>
 <span>
 </span>
 </td>
@@ -204,12 +204,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_11'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_11'/>
 11
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_11'></a>
 <span>
 </span>
 </td>
@@ -218,12 +218,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_12'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_12'/>
 12
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_12'></a>
 <span>
 </span>
 </td>
@@ -232,12 +232,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_13'/>
 13
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_13'></a>
 <span>
 </span>
 </td>
@@ -246,12 +246,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_14'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_14'/>
 14
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_14'></a>
 <span>
 </span>
 </td>
@@ -260,12 +260,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_15'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_15'/>
 15
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_15'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_15'></a>
 <span>
 </span>
 </td>
@@ -274,12 +274,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_16'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_16'/>
 16
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_16'></a>
 <span>
 </span>
 </td>
@@ -288,12 +288,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_17'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_17'/>
 17
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_17'></a>
 <span>
 </span>
 </td>
@@ -302,12 +302,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_18'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_18'/>
 18
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_18'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_18'></a>
 <span>
 </span>
 </td>
@@ -316,12 +316,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_19'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_19'/>
 19
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_19'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_19'></a>
 <span>
 </span>
 </td>
@@ -330,12 +330,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_20'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_20'/>
 20
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_20'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_20'></a>
 <span>
 </span>
 </td>
@@ -344,12 +344,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_21'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_21'/>
 21
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_21'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_21'></a>
 <span>
 </span>
 </td>
@@ -358,12 +358,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_22'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_22'/>
 22
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_22'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_22'></a>
 <span>
 </span>
 </td>
@@ -372,12 +372,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_23'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_23'/>
 23
 </td>
 <td class='killed'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_23'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_23'>1</a>
 <span>
 1. getTyhjennettavienLkm : replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED<br/>
 
@@ -388,12 +388,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_24'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_24'/>
 24
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_24'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_24'></a>
 <span>
 </span>
 </td>
@@ -402,12 +402,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_25'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_25'/>
 25
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_25'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_25'></a>
 <span>
 </span>
 </td>
@@ -416,12 +416,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_26'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_26'/>
 26
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_26'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_26'></a>
 <span>
 </span>
 </td>
@@ -430,12 +430,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_27'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_27'/>
 27
 </td>
 <td class='killed'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_27'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_27'>1</a>
 <span>
 1. getMinuutit : replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED<br/>
 
@@ -446,12 +446,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_28'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_28'/>
 28
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_28'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_28'></a>
 <span>
 </span>
 </td>
@@ -460,12 +460,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_29'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_29'/>
 29
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_29'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_29'></a>
 <span>
 </span>
 </td>
@@ -474,12 +474,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_30'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_30'/>
 30
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_30'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_30'></a>
 <span>
 </span>
 </td>
@@ -488,12 +488,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_31'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_31'/>
 31
 </td>
 <td class='killed'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_31'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_31'>1</a>
 <span>
 1. getSekunnit : replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED<br/>
 
@@ -504,12 +504,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_32'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_32'/>
 32
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_32'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_32'></a>
 <span>
 </span>
 </td>
@@ -518,12 +518,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_33'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@54d1608f_33'/>
 33
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_33'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_33'></a>
 <span>
 </span>
 </td>
@@ -534,31 +534,31 @@ body{
 <tr><td></td><td></td><td><h2>Mutations</h2></td></tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_23'>23</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@54d1608f_23'>23</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_23'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_23'/> 
 
 <p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>getTyhjennettavienLkm<br/><b>Killed by : </b>cs.helsinki.sudoku.app.PelimoottoriTest.luoPelinJossaOikeaMaaraTyhjia(cs.helsinki.sudoku.app.PelimoottoriTest)</span></span> replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_27'>27</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@54d1608f_27'>27</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_27'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_27'/> 
 
 <p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>getMinuutit<br/><b>Killed by : </b>cs.helsinki.sudoku.app.VaikeusasteTest.antaaMinuutitJaSekunnit(cs.helsinki.sudoku.app.VaikeusasteTest)</span></span> replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@7e7fe6d_31'>31</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@54d1608f_31'>31</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@7e7fe6d_31'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@54d1608f_31'/> 
 
 <p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>getSekunnit<br/><b>Killed by : </b>cs.helsinki.sudoku.app.VaikeusasteTest.antaaMinuutitJaSekunnit(cs.helsinki.sudoku.app.VaikeusasteTest)</span></span> replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED</p> 
 </td>
@@ -581,7 +581,7 @@ body{
 
 <h2>Tests examined</h2>
 <ul>
-<li>cs.helsinki.sudoku.app.PelimoottoriTest.asettaaRatkaisunPeliaLuotaessa(cs.helsinki.sudoku.app.PelimoottoriTest) (59 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.peliKesken(cs.helsinki.sudoku.app.PelimoottoriTest) (72 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.tyhjentaaRuudutJaRuutulistanJosAloitetaanUusiPeli(cs.helsinki.sudoku.app.PelimoottoriTest) (50 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.paivittaaArvonLaudalla(cs.helsinki.sudoku.app.PelimoottoriTest) (53 ms)</li><li>cs.helsinki.sudoku.app.VaikeusasteTest.antaaMinuutitJaSekunnit(cs.helsinki.sudoku.app.VaikeusasteTest) (0 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.taytettyPohjaSailyySamanaTyhjennyksenJalkeen(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (33 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.luoPelinJossaOikeaMaaraTyhjia(cs.helsinki.sudoku.app.PelimoottoriTest) (50 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.antaaLaudanJossaOikeaRiviJaSarakemaara(cs.helsinki.sudoku.app.PelimoottoriTest) (628 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.eiTeeVirheitaIsommallaMassallaPelinLuonnissa(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (997 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.antaaPelin(cs.helsinki.sudoku.app.PelimoottoriTest) (64 ms)</li>
+<li>cs.helsinki.sudoku.app.PelimoottoriTest.asettaaRatkaisunPeliaLuotaessa(cs.helsinki.sudoku.app.PelimoottoriTest) (107 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.peliKesken(cs.helsinki.sudoku.app.PelimoottoriTest) (83 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.tyhjentaaRuudutJaRuutulistanJosAloitetaanUusiPeli(cs.helsinki.sudoku.app.PelimoottoriTest) (42 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.paivittaaArvonLaudalla(cs.helsinki.sudoku.app.PelimoottoriTest) (53 ms)</li><li>cs.helsinki.sudoku.app.VaikeusasteTest.antaaMinuutitJaSekunnit(cs.helsinki.sudoku.app.VaikeusasteTest) (2 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.taytettyPohjaSailyySamanaTyhjennyksenJalkeen(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (29 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.luoPelinJossaOikeaMaaraTyhjia(cs.helsinki.sudoku.app.PelimoottoriTest) (85 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.antaaLaudanJossaOikeaRiviJaSarakemaara(cs.helsinki.sudoku.app.PelimoottoriTest) (770 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.eiTeeVirheitaIsommallaMassallaPelinLuonnissa(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (1047 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.antaaPelin(cs.helsinki.sudoku.app.PelimoottoriTest) (105 ms)</li>
 </ul>
 
 <br/>
