--- a/dokumentaatio/pit/cs.helsinki.sudoku.app/Pelimoottori.java.html
+++ b/dokumentaatio/pit/cs.helsinki.sudoku.app/Pelimoottori.java.html
@@ -1114,7 +1114,7 @@ body{
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@39e69ea7_33'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>uusiPeli<br/><b>Killed by : </b>cs.helsinki.sudoku.app.PelimoottoriTest.tyhjentaaRuudutJaRuutulistanJosAloitetaanUusiPeli(cs.helsinki.sudoku.app.PelimoottoriTest)</span></span> removed call to cs/helsinki/sudoku/app/Sudokugeneraattori::setVaikeusaste &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>uusiPeli<br/><b>Killed by : </b>cs.helsinki.sudoku.app.PelimoottoriTest.paivittaaArvonLaudalla(cs.helsinki.sudoku.app.PelimoottoriTest)</span></span> removed call to cs/helsinki/sudoku/app/Sudokugeneraattori::setVaikeusaste &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
@@ -1124,7 +1124,7 @@ body{
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@39e69ea7_34'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>uusiPeli<br/><b>Killed by : </b>cs.helsinki.sudoku.app.PelimoottoriTest.luoPelinJossaOikeaMaaraTyhjia(cs.helsinki.sudoku.app.PelimoottoriTest)</span></span> removed call to cs/helsinki/sudoku/app/Sudokugeneraattori::tyhjennaRuutujaTaydeltaLaudalta &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>uusiPeli<br/><b>Killed by : </b>cs.helsinki.sudoku.app.PelimoottoriTest.paivittaaArvonLaudalla(cs.helsinki.sudoku.app.PelimoottoriTest)</span></span> removed call to cs/helsinki/sudoku/app/Sudokugeneraattori::tyhjennaRuutujaTaydeltaLaudalta &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
@@ -1154,7 +1154,7 @@ body{
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@39e69ea7_69'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>pyydaPelilauta<br/><b>Killed by : </b>cs.helsinki.sudoku.app.PelimoottoriTest.luoPelinJossaOikeaMaaraTyhjia(cs.helsinki.sudoku.app.PelimoottoriTest)</span></span> mutated return of Object value for cs/helsinki/sudoku/app/Pelimoottori::pyydaPelilauta to ( if (x != null) null else throw new RuntimeException ) &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>pyydaPelilauta<br/><b>Killed by : </b>cs.helsinki.sudoku.app.PelimoottoriTest.paivittaaArvonLaudalla(cs.helsinki.sudoku.app.PelimoottoriTest)</span></span> mutated return of Object value for cs/helsinki/sudoku/app/Pelimoottori::pyydaPelilauta to ( if (x != null) null else throw new RuntimeException ) &rarr; KILLED</p> 
 </td>
 </tr>
 
@@ -1175,7 +1175,7 @@ body{
 
 <h2>Tests examined</h2>
 <ul>
-<li>cs.helsinki.sudoku.app.PelimoottoriTest.asettaaRatkaisunPeliaLuotaessa(cs.helsinki.sudoku.app.PelimoottoriTest) (77 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.peliKesken(cs.helsinki.sudoku.app.PelimoottoriTest) (101 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.tyhjentaaRuudutJaRuutulistanJosAloitetaanUusiPeli(cs.helsinki.sudoku.app.PelimoottoriTest) (41 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.paivittaaArvonLaudalla(cs.helsinki.sudoku.app.PelimoottoriTest) (69 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.luoPelinJossaOikeaMaaraTyhjia(cs.helsinki.sudoku.app.PelimoottoriTest) (63 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.antaaLaudanJossaOikeaRiviJaSarakemaara(cs.helsinki.sudoku.app.PelimoottoriTest) (682 ms)</li>
+<li>cs.helsinki.sudoku.app.PelimoottoriTest.asettaaRatkaisunPeliaLuotaessa(cs.helsinki.sudoku.app.PelimoottoriTest) (67 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.peliKesken(cs.helsinki.sudoku.app.PelimoottoriTest) (80 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.tyhjentaaRuudutJaRuutulistanJosAloitetaanUusiPeli(cs.helsinki.sudoku.app.PelimoottoriTest) (49 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.paivittaaArvonLaudalla(cs.helsinki.sudoku.app.PelimoottoriTest) (37 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.luoPelinJossaOikeaMaaraTyhjia(cs.helsinki.sudoku.app.PelimoottoriTest) (50 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.antaaLaudanJossaOikeaRiviJaSarakemaara(cs.helsinki.sudoku.app.PelimoottoriTest) (616 ms)</li>
 </ul>
 
 <br/>
