--- a/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/ui/nakyma/Aloitusnakyma.html
+++ b/dokumentaatio/checkstyle/xref/cs/helsinki/sudoku/ui/nakyma/Aloitusnakyma.html
@@ -63,7 +63,7 @@
 <a class="jxr_linenumber" name="L55" href="#L55">55</a>                  + <span class="jxr_string">"&lt;body&gt;\n"</span>
 <a class="jxr_linenumber" name="L56" href="#L56">56</a>                  + <span class="jxr_string">"&lt;table style=\&quot;border:solid;text-align:left\&quot;&gt;\n"</span>
 <a class="jxr_linenumber" name="L57" href="#L57">57</a>                  + <span class="jxr_string">"  &lt;tr&gt;\n"</span>
-<a class="jxr_linenumber" name="L58" href="#L58">58</a>                  + <span class="jxr_string">"    &lt;th&gt;Ruudun väri&lt;/th&gt;\n"</span>
+<a class="jxr_linenumber" name="L58" href="#L58">58</a>                  + <span class="jxr_string">"    &lt;th&gt;Väri&lt;/th&gt;\n"</span>
 <a class="jxr_linenumber" name="L59" href="#L59">59</a>                  + <span class="jxr_string">"    &lt;th&gt;Selite&lt;/th&gt;\n"</span>
 <a class="jxr_linenumber" name="L60" href="#L60">60</a>                  + <span class="jxr_string">"  &lt;/tr&gt;\n"</span>
 <a class="jxr_linenumber" name="L61" href="#L61">61</a>                  + <span class="jxr_string">"  &lt;tr&gt;\n"</span>
