--- a/dokumentaatio/pit/cs.helsinki.sudoku.app/Sudokugeneraattori.java.html
+++ b/dokumentaatio/pit/cs.helsinki.sudoku.app/Sudokugeneraattori.java.html
@@ -2006,15 +2006,15 @@ body{
 <a name='org.pitest.mutationtest.report.html.SourceFile@17273273_137'/>
 137
 </td>
-<td class='uncertain'>
+<td class='killed'>
 <span class='pop'>
 <a href='#grouporg.pitest.mutationtest.report.html.SourceFile@17273273_137'>1</a>
 <span>
-1. tayta : replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; TIMED_OUT<br/>
+1. tayta : replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED<br/>
 
 </span>
 </td>
-<td class='covered'><pre><span  class='uncertain'>            return true;</span></pre></td></tr>
+<td class='covered'><pre><span  class='killed'>            return true;</span></pre></td></tr>
 
 
 <tr>
@@ -2962,7 +2962,7 @@ body{
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@17273273_53'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>getRatkaisu<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.eiTeeVirheitaIsommallaMassallaPelinLuonnissa(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> mutated return of Object value for cs/helsinki/sudoku/app/Sudokugeneraattori::getRatkaisu to ( if (x != null) null else throw new RuntimeException ) &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>getRatkaisu<br/><b>Killed by : </b>cs.helsinki.sudoku.app.PelimoottoriTest.asettaaRatkaisunPeliaLuotaessa(cs.helsinki.sudoku.app.PelimoottoriTest)</span></span> mutated return of Object value for cs/helsinki/sudoku/app/Sudokugeneraattori::getRatkaisu to ( if (x != null) null else throw new RuntimeException ) &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
@@ -2982,7 +2982,7 @@ body{
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@17273273_73'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>annaUusiSudokupeli<br/><b>Killed by : </b>cs.helsinki.sudoku.app.PelimoottoriTest.luoPelinJossaOikeaMaaraTyhjia(cs.helsinki.sudoku.app.PelimoottoriTest)</span></span> mutated return of Object value for cs/helsinki/sudoku/app/Sudokugeneraattori::annaUusiSudokupeli to ( if (x != null) null else throw new RuntimeException ) &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>annaUusiSudokupeli<br/><b>Killed by : </b>cs.helsinki.sudoku.app.PelimoottoriTest.paivittaaArvonLaudalla(cs.helsinki.sudoku.app.PelimoottoriTest)</span></span> mutated return of Object value for cs/helsinki/sudoku/app/Sudokugeneraattori::annaUusiSudokupeli to ( if (x != null) null else throw new RuntimeException ) &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
@@ -3032,7 +3032,7 @@ body{
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@17273273_100'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>tyhjennaRuutujaTaydeltaLaudalta<br/><b>Killed by : </b>cs.helsinki.sudoku.app.PelimoottoriTest.luoPelinJossaOikeaMaaraTyhjia(cs.helsinki.sudoku.app.PelimoottoriTest)</span></span> negated conditional &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>tyhjennaRuutujaTaydeltaLaudalta<br/><b>Killed by : </b>cs.helsinki.sudoku.app.PelimoottoriTest.paivittaaArvonLaudalla(cs.helsinki.sudoku.app.PelimoottoriTest)</span></span> negated conditional &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
@@ -3042,7 +3042,7 @@ body{
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@17273273_104'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>tyhjennaRuutujaTaydeltaLaudalta<br/><b>Killed by : </b>cs.helsinki.sudoku.app.PelimoottoriTest.luoPelinJossaOikeaMaaraTyhjia(cs.helsinki.sudoku.app.PelimoottoriTest)</span></span> negated conditional &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>tyhjennaRuutujaTaydeltaLaudalta<br/><b>Killed by : </b>cs.helsinki.sudoku.app.PelimoottoriTest.paivittaaArvonLaudalla(cs.helsinki.sudoku.app.PelimoottoriTest)</span></span> negated conditional &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
@@ -3052,7 +3052,7 @@ body{
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@17273273_107'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>tyhjennaRuutujaTaydeltaLaudalta<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.taytettyPohjaSailyySamanaTyhjennyksenJalkeen(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> removed call to cs/helsinki/sudoku/app/Sudokugeneraattori::asetaTyhjennettavanTiedot &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>tyhjennaRuutujaTaydeltaLaudalta<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.eiTeeVirheitaIsommallaMassallaPelinLuonnissa(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> removed call to cs/helsinki/sudoku/app/Sudokugeneraattori::asetaTyhjennettavanTiedot &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
@@ -3062,7 +3062,7 @@ body{
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@17273273_109'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>tyhjennaRuutujaTaydeltaLaudalta<br/><b>Killed by : </b>cs.helsinki.sudoku.app.PelimoottoriTest.luoPelinJossaOikeaMaaraTyhjia(cs.helsinki.sudoku.app.PelimoottoriTest)</span></span> negated conditional &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>tyhjennaRuutujaTaydeltaLaudalta<br/><b>Killed by : </b>cs.helsinki.sudoku.app.PelimoottoriTest.paivittaaArvonLaudalla(cs.helsinki.sudoku.app.PelimoottoriTest)</span></span> negated conditional &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
@@ -3102,7 +3102,7 @@ body{
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@17273273_137'/> 
 
-<p class='TIMED_OUT'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>tayta<br/><b>Killed by : </b>none</span></span> replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; TIMED_OUT</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>tayta<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.taytettyPohjaSailyySamanaTyhjennyksenJalkeen(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
@@ -3142,7 +3142,7 @@ body{
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@17273273_145'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>tayta<br/><b>Killed by : </b>cs.helsinki.sudoku.app.PelimoottoriTest.luoPelinJossaOikeaMaaraTyhjia(cs.helsinki.sudoku.app.PelimoottoriTest)</span></span> replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>tayta<br/><b>Killed by : </b>cs.helsinki.sudoku.app.PelimoottoriTest.paivittaaArvonLaudalla(cs.helsinki.sudoku.app.PelimoottoriTest)</span></span> replaced return of integer sized value with (x == 0 ? 1 : 0) &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
@@ -3242,7 +3242,7 @@ body{
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@17273273_182'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.laskeeOikeinRuudunJollaVahitenSopivia(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> changed conditional boundary &rarr; KILLED</p> <p class='KILLED'><span class='pop'>2.<span><b>2</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.laskeeOikeinRuudunJollaVahitenSopivia(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> Changed increment from 1 to -1 &rarr; KILLED</p> <p class='KILLED'><span class='pop'>3.<span><b>3</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.laskeeOikeinRuudunJollaVahitenSopivia(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> negated conditional &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.antaaPoikkeavatTiedotJosEiYhtaanSopivaaRuutua(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> changed conditional boundary &rarr; KILLED</p> <p class='KILLED'><span class='pop'>2.<span><b>2</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.antaaPoikkeavatTiedotJosEiYhtaanSopivaaRuutua(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> Changed increment from 1 to -1 &rarr; KILLED</p> <p class='KILLED'><span class='pop'>3.<span><b>3</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.laskeeOikeinRuudunJollaVahitenSopivia(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> negated conditional &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
@@ -3252,7 +3252,7 @@ body{
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@17273273_183'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.laskeeOikeinRuudunJollaVahitenSopivia(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> changed conditional boundary &rarr; KILLED</p> <p class='KILLED'><span class='pop'>2.<span><b>2</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.laskeeOikeinRuudunJollaVahitenSopivia(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> Changed increment from 1 to -1 &rarr; KILLED</p> <p class='KILLED'><span class='pop'>3.<span><b>3</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.laskeeOikeinRuudunJollaVahitenSopivia(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> negated conditional &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.antaaPoikkeavatTiedotJosEiYhtaanSopivaaRuutua(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> changed conditional boundary &rarr; KILLED</p> <p class='KILLED'><span class='pop'>2.<span><b>2</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.antaaPoikkeavatTiedotJosEiYhtaanSopivaaRuutua(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> Changed increment from 1 to -1 &rarr; KILLED</p> <p class='KILLED'><span class='pop'>3.<span><b>3</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.laskeeOikeinRuudunJollaVahitenSopivia(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> negated conditional &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
@@ -3262,7 +3262,7 @@ body{
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@17273273_184'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.laskeeOikeinRuudunJollaVahitenSopivia(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> negated conditional &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.antaaPoikkeavatTiedotJosEiYhtaanSopivaaRuutua(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> negated conditional &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
@@ -3272,7 +3272,7 @@ body{
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@17273273_188'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.antaaPoikkeavatTiedotJosEiYhtaanSopivaaRuutua(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> changed conditional boundary &rarr; KILLED</p> <p class='KILLED'><span class='pop'>2.<span><b>2</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.laskeeOikeinRuudunJollaVahitenSopivia(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> changed conditional boundary &rarr; KILLED</p> <p class='KILLED'><span class='pop'>3.<span><b>3</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.laskeeOikeinRuudunJollaVahitenSopivia(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> negated conditional &rarr; KILLED</p> <p class='KILLED'><span class='pop'>4.<span><b>4</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.laskeeOikeinRuudunJollaVahitenSopivia(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> negated conditional &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.antaaPoikkeavatTiedotJosEiYhtaanSopivaaRuutua(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> changed conditional boundary &rarr; KILLED</p> <p class='KILLED'><span class='pop'>2.<span><b>2</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.laskeeOikeinRuudunJollaVahitenSopivia(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> changed conditional boundary &rarr; KILLED</p> <p class='KILLED'><span class='pop'>3.<span><b>3</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.antaaPoikkeavatTiedotJosEiYhtaanSopivaaRuutua(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> negated conditional &rarr; KILLED</p> <p class='KILLED'><span class='pop'>4.<span><b>4</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.laskeeOikeinRuudunJollaVahitenSopivia(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> negated conditional &rarr; KILLED</p> 
 </td>
 </tr>
 <tr>
@@ -3282,7 +3282,7 @@ body{
 
 <a name='grouporg.pitest.mutationtest.report.html.SourceFile@17273273_198'/> 
 
-<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.laskeeOikeinRuudunJollaVahitenSopivia(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> mutated return of Object value for cs/helsinki/sudoku/app/Sudokugeneraattori::ruutuJollaVahitenSopivia to ( if (x != null) null else throw new RuntimeException ) &rarr; KILLED</p> 
+<p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>ruutuJollaVahitenSopivia<br/><b>Killed by : </b>cs.helsinki.sudoku.app.SudokugeneraattoriTest.antaaPoikkeavatTiedotJosEiYhtaanSopivaaRuutua(cs.helsinki.sudoku.app.SudokugeneraattoriTest)</span></span> mutated return of Object value for cs/helsinki/sudoku/app/Sudokugeneraattori::ruutuJollaVahitenSopivia to ( if (x != null) null else throw new RuntimeException ) &rarr; KILLED</p> 
 </td>
 </tr>
 
@@ -3303,7 +3303,7 @@ body{
 
 <h2>Tests examined</h2>
 <ul>
-<li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.antaaPoikkeavatTiedotJosEiYhtaanSopivaaRuutua(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (3 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.tayttaaToisenPohjanOikein(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (3 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.tyhjentaaRuudutJaRuutulistanJosAloitetaanUusiPeli(cs.helsinki.sudoku.app.PelimoottoriTest) (41 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.luoPelinJossaOikeaMaaraTyhjia(cs.helsinki.sudoku.app.PelimoottoriTest) (63 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.antaaLaudanJossaOikeaRiviJaSarakemaara(cs.helsinki.sudoku.app.PelimoottoriTest) (682 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.tayttaaVaikeanPohjan(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (403 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.tayttaaKolmannenPohjanOikein(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (1 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.tayttaaPohjanOikein(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (3 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.asettaaRatkaisunPeliaLuotaessa(cs.helsinki.sudoku.app.PelimoottoriTest) (77 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.laskeeOikeinRuudunJollaVahitenSopivia(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (1 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.tyhjentaaLaudan(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (1 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.peliKesken(cs.helsinki.sudoku.app.PelimoottoriTest) (101 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.paivittaaArvonLaudalla(cs.helsinki.sudoku.app.PelimoottoriTest) (69 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.taytettyPohjaSailyySamanaTyhjennyksenJalkeen(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (26 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.eiTeeVirheitaIsommallaMassallaPelinLuonnissa(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (942 ms)</li>
+<li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.antaaPoikkeavatTiedotJosEiYhtaanSopivaaRuutua(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (1 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.tayttaaToisenPohjanOikein(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (2 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.tyhjentaaRuudutJaRuutulistanJosAloitetaanUusiPeli(cs.helsinki.sudoku.app.PelimoottoriTest) (49 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.luoPelinJossaOikeaMaaraTyhjia(cs.helsinki.sudoku.app.PelimoottoriTest) (50 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.antaaLaudanJossaOikeaRiviJaSarakemaara(cs.helsinki.sudoku.app.PelimoottoriTest) (616 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.tayttaaVaikeanPohjan(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (540 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.tayttaaKolmannenPohjanOikein(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (1 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.tayttaaPohjanOikein(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (5 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.asettaaRatkaisunPeliaLuotaessa(cs.helsinki.sudoku.app.PelimoottoriTest) (67 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.laskeeOikeinRuudunJollaVahitenSopivia(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (1 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.tyhjentaaLaudan(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (1 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.peliKesken(cs.helsinki.sudoku.app.PelimoottoriTest) (80 ms)</li><li>cs.helsinki.sudoku.app.PelimoottoriTest.paivittaaArvonLaudalla(cs.helsinki.sudoku.app.PelimoottoriTest) (37 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.taytettyPohjaSailyySamanaTyhjennyksenJalkeen(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (35 ms)</li><li>cs.helsinki.sudoku.app.SudokugeneraattoriTest.eiTeeVirheitaIsommallaMassallaPelinLuonnissa(cs.helsinki.sudoku.app.SudokugeneraattoriTest) (1078 ms)</li>
 </ul>
 
 <br/>
